src/test/ui/typeck/issue-91450-inner-ty-error.stderr
error[E0308]: mismatched types
  --> $DIR/issue-91450-inner-ty-error.rs:4:13
   |
LL | fn foo() -> Option<_> {}
   |    ---      ^^^^^^^^^ expected enum `Option`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression
   |
   = note:   expected enum `Option<_>`
           found unit type `()`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/issue-91450-inner-ty-error.rs:4:20
   |
LL | fn foo() -> Option<_> {}
   |                    ^ not allowed in type signatures

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0121, E0308.
For more information about an error, try `rustc --explain E0121`.
